--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# Ignore vim swap files
+*.swp
+
+# Ignore vendor folder
+vendor
+
+# Ignore binary generated with "go build"
+golang-png-encoding
