--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,3 +23,7 @@
 [[constraint]]
   name = "github.com/disintegration/imaging"
   version = "1.3.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/foobaz/lossypng"
